// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Examples: Sidebar - Customers CDInquiries renders 1`] = `
<Fragment>
  <CustomersIntroduction />
  <h2
    id="customers-inquiries"
  >
    Customers inquiries
  </h2>
  <CustomersAdditionalInformation />
</Fragment>
`;

exports[`Examples: Sidebar - Customers CDOrderHistory renders 1`] = `
<Fragment>
  <CustomersIntroduction />
  <h2
    id="customers-order-history"
  >
    Customers order history
  </h2>
  <CustomersAdditionalInformation />
</Fragment>
`;

exports[`Examples: Sidebar - Customers CDSummaryCharts renders 1`] = `
<Fragment>
  <CustomersIntroduction />
  <h2
    id="customers-summary-charts"
  >
    Customers summary charts
  </h2>
  <CustomersAdditionalInformation />
</Fragment>
`;

exports[`Examples: Sidebar - Customers COOverview renders 1`] = `
<Fragment>
  <CustomersIntroduction />
  <h2
    id="customers-overview"
  >
    Customers overview
  </h2>
  <CustomersOverview
    customersList={
      Array [
        Object {
          "email": "sven.svensson@email.com",
          "firstName": "Sven",
          "id": "c1",
          "lastName": "Svensson",
          "location": "Visby",
          "phone": "+47 *** ** ***",
          "status": "default",
        },
        Object {
          "email": "anna.svensson@email.com",
          "firstName": "Anna",
          "id": "c2",
          "lastName": "Svensson",
          "location": "Stockholm",
          "phone": "+47 *** ** ***",
          "status": "success",
        },
        Object {
          "email": "ola.nordmann@email.com",
          "firstName": "Ola",
          "id": "c3",
          "lastName": "Nordmann",
          "location": "Oslo",
          "phone": "+47 *** ** ***",
          "status": "success",
        },
        Object {
          "email": "kari.nordmann@email.com",
          "firstName": "Kari",
          "id": "c4",
          "lastName": "Nordmann",
          "location": "Bergen",
          "phone": "+47 *** ** ***",
          "status": "warning",
        },
        Object {
          "email": "holger.danske@email.com",
          "firstName": "Holger",
          "id": "c5",
          "lastName": "Danske",
          "location": "Copenhagen",
          "phone": "+47 *** ** ***",
          "status": "danger",
        },
        Object {
          "email": "matti.meikalainen@email.com",
          "firstName": "Matti",
          "id": "c6",
          "lastName": "Meikäläinen",
          "location": "Lahti",
          "phone": "+47 *** ** ***",
          "status": "success",
        },
        Object {
          "email": "helma.egilsdottir@email.com",
          "firstName": "Helma",
          "id": "c7",
          "lastName": "Egilsdóttir",
          "location": "Reykjavík",
          "phone": "+47 *** ** ***",
          "status": "default",
        },
      ]
    }
    setCustomerIndex={[Function]}
    statusText={
      Object {
        "danger": "Missing",
        "default": "New",
        "success": "Delivered",
        "warning": "Late",
      }
    }
    test={true}
  />
  <CustomersAdditionalInformation />
</Fragment>
`;

exports[`Examples: Sidebar - Customers CustomersAdditionalInformation renders 1`] = `
<Fragment>
  <h2
    id="customers-additional-information"
  >
    Additional information
  </h2>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et mattis massa. Sed et gravida mi. Aliquam lobortis ligula nulla, vel consequat ligula auctor et. Vivamus placerat, odio et varius efficitur, neque leo condimentum mi, sed iaculis nisi arcu sit amet dui. Sed vehicula leo in purus lacinia, id auctor nulla scelerisque. Sed egestas sapien non enim pharetra sodales. Quisque a erat accumsan ligula efficitur vulputate blandit sed lorem. Nullam condimentum ultricies metus, et volutpat lacus tempor id. In tortor ante, interdum non convallis in, luctus non neque. Pellentesque in mauris enim.
  </p>
</Fragment>
`;

exports[`Examples: Sidebar - Customers CustomersIntroduction renders 1`] = `
<Fragment>
  <h2
    id="customers-introduction"
  >
    Introduction
  </h2>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et mattis massa. Sed et gravida mi. Aliquam lobortis ligula nulla, vel consequat ligula auctor et. Vivamus placerat, odio et varius efficitur, neque leo condimentum mi, sed iaculis nisi arcu sit amet dui. Sed vehicula leo in purus lacinia, id auctor nulla scelerisque. Sed egestas sapien non enim pharetra sodales. Quisque a erat accumsan ligula efficitur vulputate blandit sed lorem. Nullam condimentum ultricies metus, et volutpat lacus tempor id. In tortor ante, interdum non convallis in, luctus non neque. Pellentesque in mauris enim.
  </p>
</Fragment>
`;
